--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,120 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+}
+
+html{
+    font-family: 'Overpass', sans-serif;
+}
+
+body{
+    background-color: #FFFCF3;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Syne', sans-serif;
+}
+
+/* syne-regular - latin */
+@font-face {
+  font-display: swap; 
+  font-family: 'Syne';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./assets/fonts/syne/syne-v24-latin-regular.woff2') format('woff2'); 
+}
+/* syne-500 - latin */
+@font-face {
+  font-display: swap; 
+  font-family: 'Syne';
+  font-style: normal;
+  font-weight: 500;
+  src: url('./assets/fonts/syne/syne-v24-latin-500.woff2') format('woff2'); 
+}
+/* syne-600 - latin */
+@font-face {
+  font-display: swap; 
+  font-family: 'Syne';
+  font-style: normal;
+  font-weight: 600;
+  src: url('./assets/fonts/syne/syne-v24-latin-600.woff2') format('woff2'); 
+}
+/* syne-700 - latin */
+@font-face {
+  font-display: swap;
+  font-family: 'Syne';
+  font-style: normal;
+  font-weight: 700;
+  src: url('./assets/fonts/syne/syne-v24-latin-700.woff2') format('woff2'); 
+}
+/* syne-800 - latin */
+@font-face {
+  font-display: swap; 
+  font-family: 'Syne';
+  font-style: normal;
+  font-weight: 800;
+  src: url('./assets/fonts/syne/syne-v24-latin-800.woff2') format('woff2'); 
+}
+
+/* overpass-regular - latin */
+@font-face {
+  font-display: swap; 
+  font-family: 'Overpass';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./assets/fonts/overpass/overpass-v19-latin-regular.woff2') format('woff2'); 
+}
+/* overpass-italic - latin */
+@font-face {
+  font-display: swap; 
+  font-family: 'Overpass';
+  font-style: italic;
+  font-weight: 400;
+  src: url('./assets/fonts/overpass/overpass-v19-latin-italic.woff2') format('woff2');
+}
+/* overpass-500 - latin */
+@font-face {
+  font-display: swap;
+  font-family: 'Overpass';
+  font-style: normal;
+  font-weight: 500;
+  src: url('./assets/fonts/overpass/overpass-v19-latin-500.woff2') format('woff2'); 
+}
+/* overpass-600 - latin */
+@font-face {
+  font-display: swap; 
+  font-family: 'Overpass';
+  font-style: normal;
+  font-weight: 600;
+  src: url('./assets/fonts/overpass/overpass-v19-latin-600.woff2') format('woff2'); 
+}
+/* overpass-700 - latin */
+@font-face {
+  font-display: swap; 
+  font-family: 'Overpass';
+  font-style: normal;
+  font-weight: 700;
+  src: url('./assets/fonts/overpass/overpass-v19-latin-700.woff2') format('woff2'); 
+}
+/* overpass-800 - latin */
+@font-face {
+  font-display: swap; 
+  font-family: 'Overpass';
+  font-style: normal;
+  font-weight: 800;
+  src: url('./assets/fonts/overpass/overpass-v19-latin-800.woff2') format('woff2'); 
+}
+/* overpass-900 - latin */
+@font-face {
+  font-display: swap; 
+  font-family: 'Overpass';
+  font-style: normal;
+  font-weight: 900;
+  src: url('./assets/fonts/overpass/overpass-v19-latin-900.woff2') format('woff2'); 
+}
+
+.wrapper{
+    max-width: 1720px;
+    margin: 0 auto;
+    padding: 0 100px;
+}
+
