Add landing page and partial About Me section

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,1 +1,30 @@
-<p>about-me works!</p>
+<section>
+    <h2>About me</h2>
+    <div>
+        <div class="text_container">
+            <p>
+                Hello, my name is Mario. I’m a Frontend Developer and passionate IT enthusiast who enjoys building
+                modern, user-focused web experiences. For me, coding is more than just writing lines of code — it’s
+                about turning ideas into functional, real-world solutions.
+
+                I’m driven by continuous learning and constantly push myself beyond my comfort zone by exploring new
+                technologies and refining my core skills. I approach challenges with analytical thinking, creativity,
+                and persistence, breaking complex problems into clear and efficient solutions.
+            </p>
+            <div>
+                <img src="./../../../assets/img/house.png" alt="house.png">
+                <p>Based in Düsseldorf</p>
+            </div>
+            <div>
+                <img src="./../../../assets/img/laptop.png" alt="laptop.png">
+                <p>Open to work Remote</p>
+            </div>
+            <div>
+                <button>
+                    Let’s talk
+                </button>
+            </div>
+        </div>
+        <div>dawdawd</div>
+    </div>
+</section>
