--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -4,8 +4,20 @@
             <h1>Frontend<br>Developer</h1>
         </div>
         <div>
-
+            <span></span>
+            <h3>Mario Milaj</h3>
         </div>
     </div>
-    <div></div>
+    <div class="hero_bottom">
+        <div>
+            <a href="">milajmario&#64;gmail.com</a>
+        </div>
+        <div>
+            <svg width="96" height="163" viewBox="0 0 96 163" fill="none">
+                <path d="M23 135.105L48 160.105L73 135.105" stroke="black" stroke-width="4" />
+                <path d="M48 68V160.105" stroke="black" stroke-width="4" />
+            </svg>
+            <p>Scroll<br>down</p>
+        </div>
+    </div>
 </section>
