--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -1,8 +1,103 @@
 @use "../../shared/mixins/mixins";
 
 section {
-  @include mixins.dflex(center, center, 0);
+  @include mixins.dflex(space-around, center, 0);
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 92px);
+}
+
+.hero_headline_container {
+  @include mixins.dflex(center, flex-start, 30px);
+  flex-direction: column;
+
+  div:nth-child(1) {
+    > h1 {
+      text-align: center;
+      font-weight: 800;
+      font-size: 128px;
+      line-height: 100%;
+      letter-spacing: -2.5%;
+    }
+  }
+
+  div:nth-child(2) {
+    @include mixins.dflex(flex-start, center, 0);
+    flex-direction: row;
+    width: 100%;
+
+    > span {
+      width: 65%;
+      border: 3px solid black;
+    }
+
+    > h3 {
+      width: 35%;
+      text-align: center;
+      font-weight: 700;
+      font-size: 48px;
+      line-height: 100%;
+      letter-spacing: -2.5%;
+      color: #00bc8f;
+    }
+  }
+}
+
+.hero_bottom {
+  @include mixins.dflex(space-between, center, 0);
+  width: 100%;
+
+  > div:nth-child(1) {
+    height: 100%;
+    transform: rotate(270deg);
+    transform-origin: top bottom;
+
+    > a {
+      text-decoration: none;
+      @include mixins.fontStyling(300, 100%, -2.5, 22px);
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+
+  > div:nth-child(2) {
+    @include mixins.dflex(space-between, center, 0);
+    flex-direction: column;
+    height: 100%;
+    position: relative;
+
+    >svg{
+      >path{
+        animation: scrollDownArrow 1.5s infinite ease-in-out;
+      }
+    }
+
+    > p {
+      @include mixins.fontStyling(300, 100%, -2.5, 22px);
+    }
+  }
+}
+
+@keyframes scrollDownArrow {
+  0% {
+    transform: translateY(-160px);
+    opacity: 0;
+  }
+  15% {
+    opacity: 1;
+  }
+  70% {
+    transform: translateY(150px);
+    opacity: 1;
+  }
+  85% {
+    transform: translateY(160px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(-160px);
+    opacity: 0;
+  }
 }
