--- a/src/app/shared/mixins/mixins.scss
+++ b/src/app/shared/mixins/mixins.scss
@@ -1,6 +1,14 @@
-@mixin dflex($js, $ai, $g){
-    display: flex;
-    justify-content: $js;
-    align-items: $ai;
-    gap: $g;
+@mixin dflex($js, $ai, $g) {
+  display: flex;
+  justify-content: $js;
+  align-items: $ai;
+  gap: $g;
+}
+
+@mixin fontStyling($fweight, $lheight, $lspacing, $fsize) {
+  color: black;
+  font-weight: $fweight;
+  line-height: $lheight;
+  letter-spacing: $lspacing;
+  font-size: $fsize;
 }
