--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,11 +6,37 @@ html{
     font-family: 'Overpass', sans-serif;
 }
 
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #00bc8f #FFFCF3;
+}
+
+html::-webkit-scrollbar {
+  width: 10px;
+}
+
+html::-webkit-scrollbar-track {
+  background: #FFFCF3;
+}
+
+html::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: linear-gradient(
+    to bottom,
+    #00d4a0,
+    #00bc8f
+  );
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background: #009e76;
+}
+
 body{
     background-color: #FFFCF3;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2 {
   font-family: 'Syne', sans-serif;
 }
 
